fix: hearing modal should never overlap children KER-298

--- a/cities/helsinki/assets/sass/hel/_hearing-form.scss
+++ b/cities/helsinki/assets/sass/hel/_hearing-form.scss
@@ -1,5 +1,9 @@
 div:has(> .hearing-form-modal) {
-  z-index: 1050;
+  z-index: 1003;
+}
+
+div:has(> .hearing-form-child-modal) {
+  z-index: 1004;
 }
 
 .form-container {
